--- a/home/allM_style.css
+++ b/home/allM_style.css
@@ -1,44 +1,118 @@
 body {
-    background-color: #000;
+    background-color: #11141B;
 }
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+#searchForm {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: auto;
+    background-color: #21283F;
+    padding: 15px;
+    box-sizing: border-box; 
+}
+
 .movies {
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
+    box-sizing: border-box; 
 }
+
+/* Ensure consistent padding and alignment for movie items */
 .movies li {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     list-style: none;
-    margin: 10px;
     padding: 15px;
-    border-radius: 12px;
     text-align: center;
-    background-color: #272727;
-}
-.movies li img{
-    max-width: 300px;
-    border-radius: 12px;
-}
-.movies li h2{
-    color: #ffff;
-    font-size: 1.8em;
-    padding: 15px 10px 0px;
-    margin-top: auto;
+    background-color: #21283f;
 }
 
+.movies li img {
+    max-width: 200px;
+    border-radius: 12px;
+}
+
+.movieclass {
+    background-color: #21283f;
+}
+
+.movies li h2 {
+    max-width: 200px;
+    color: #fff;
+    font-size: 1.8em;
+    padding: 15px 10px 0;
+    margin-top: auto;
+    text-align: center;
+    display: block;
+}
 input[type=text] {
-    width: 100%;
+    width: 70%;
     box-sizing: border-box;
     border: 2px solid #ccc;
-    border-radius: 4px;
     font-size: 16px;
     background-color: white;
     background-image: url('searchicon.png');
-    background-size: 2%;
-    background-position: 5px 5px; 
+    background-size: contain;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
+    border-radius: 10px;
 }
+#searchForm img {
+    height: 45px; 
+    width: auto;
+    
+}
+#searchForm button{
+    width: 40px; 
+    height: 40px; 
+    background: url('saved.png') no-repeat center center;
+    background-size: contain; 
+    border: none; 
+    cursor: pointer; 
+}
+
+
+
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-container img {
+    max-width: 200px;
+    border-radius: 12px;
+}
+
+.top-right-button {
+    position: absolute;
+    top: 10px; /* Adjust as needed */
+    right: 10px; /* Adjust as needed */
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+/* .movieclass {
+    background-color: #21283f;
+    color: #fff;
+    padding: 15px 10px 0;
+    margin-top: auto;
+    text-align: center;
+    display: block;
+    border: 10px;
+    border-color: #11141B;
+    cursor: pointer;
+} */
