--- a/home/topM_style.css
+++ b/home/topM_style.css
@@ -1,7 +1,23 @@
-#listingTable {
+body, html {
+    margin: 0;
+    padding: 0;
     width: 100%;
+    height: 100%;
+}
+h2{
+    color: white;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
+    margin: auto;   
+    padding-top: 2em;
+}
+#listingTable {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;   
+    padding: 2em;
 }
 #listingTable li {
     flex: 1;
@@ -9,32 +25,45 @@
     flex-direction: column;
     align-items: center;
     list-style: none;
-    margin: 10px;
+    
     padding: 15px;
-    border-radius: 12px;
     text-align: center;
-    background-color: #e5b1b1;
+    background-color: #21283f;
 }
 #listingTable li img{
     max-width: 200px;
     border-radius: 12px;
 }
 #listingTable li h2{
+    max-width: 200px;
     color: #ffff;
     font-size: 1.8em;
     padding: 15px 10px 0px;
     margin-top: auto;
+    text-align: center;
+    display: block;
+}
+#listingTable li p{
+    color: white;
+    max-width: 200px;
 }
 #page_num {
-    color: black;
+    color: #0066cc;
+    font-family: Roboto;
     text-decoration: none;
 }
 .page_container {
     display: inline;
-    background-color: green;
+    background-color: whitesmoke;
     font-size: 2em;
-    width: 10%;
+    border-radius: 10px;
+}
+.page_container a{
+    margin: 10px;
 }
 .pagination {
-    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
